--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
   "dependencies": {
     "async": "^1.5.2",
     "babel-polyfill": "6.6.1",
-    "css-loader": "0.23.1",
     "bcrypt-nodejs": "^0.0.3",
     "bitgo": "0.11.64",
     "body-parser": "^1.14.2",
@@ -46,6 +45,7 @@
     "connect-assets": "^5.1.0",
     "connect-mongo": "^1.1.0",
     "cookie-parser": "^1.4.1",
+    "css-loader": "0.23.1",
     "dotenv": "^2.0.0",
     "errorhandler": "^1.4.3",
     "express": "^4.13.4",
@@ -66,10 +66,6 @@
     "instagram-node": "^0.5.8",
     "isomorphic-fetch": "2.2.1",
     "isomorphic-style-loader": "0.0.10",
-    "koa": "1.2.0",
-    "koa-proxy": "0.5.0",
-    "koa-static": "2.0.0",
-    "node-sass": "3.4.2",
     "jquery": "^2.2.2",
     "koa": "1.2.0",
     "koa-proxy": "0.5.0",
@@ -83,6 +79,7 @@
     "method-override": "^2.3.5",
     "mongoose": "^4.3.7",
     "morgan": "^1.6.1",
+    "multer": "^1.1.0",
     "node-foursquare": "^0.3.0",
     "node-linkedin": "^0.5.3",
     "node-sass": "^3.4.2",
@@ -105,11 +102,11 @@
     "react-inline-css": "2.1.0",
     "react-router": "2.0.0",
     "react-transmit": "3.1.7",
-    "sass-loader": "3.1.2",
-    "style-loader": "0.13.0",
     "request": "^2.69.0",
+    "sass-loader": "3.1.2",
     "serve-favicon": "^2.3.0",
     "stripe": "^4.3.0",
+    "style-loader": "0.13.0",
     "tumblr.js": "^0.0.7",
     "twilio": "^3.3.0-edge",
     "twit": "^2.2.1",
