need to run mongodb locally now

--- a/.env
+++ b/.env
@@ -17,6 +17,35 @@
  * IMPORTANT  IMPORTANT  IMPORTANT  IMPORTANT  IMPORTANT  IMPORTANT  IMPORTANT
  */
 
+#!/usr/bin/env bash
+
+
+FACEBOOK_ID=871589006273384
+FACEBOOK_SECRET=a1b1e5bebe6854ddd912bb7c0b253805
+GOOGLE_ID=736815987942-8hvllo62jus0n6ig5bq7mk1p3fghgsae.apps.googleusercontent.com
+GOOGLE_SECRET=3_tAYNDNGWvvqlZD8hXmNO3C
+GITHUB_ID=13eaed80a6d2bf680d30
+GITHUB_SECRET=a943989a89b3d6a6c7a3340d72b223f9de03f070
+INSTAGRAM_ID=23a045f060d0427eb1956d82231b411f
+INSTAGRAM_SECRET=37910220052d47dc8cfe374fa743cef4
+LASTFM_KEY=f74ad94585be959288a43cfbfc18c0e8
+LASTFM_SECRET=262dff1fc42b5cd9ade56a3455d2d78f
+MONGODB=mongodb://kizzlebot:tree444@ds023448.mlab.com:23448/kizzlebase
+MONGOLAB_URI=mongodb://kizzlebot:tree444@ds023448.mlab.com:23448/kizzlebase
+
+MONGODB=mongodb://localhost:27017
+MONGOLAB_URI=mongodb://localhost:27017
+ TWITTER_KEY=ybeD3t1Y6kf5vL9h6Jm3683yC
+ TWITTER_SECRET=FICMSA3x4LHmiUUyvtYX7MOuSPvoBMH2n3JS81iRmGwM5ppaMz
+
+
+
+HOMEBREW_GITHUB_API_TOKEN=d1d4f393eaae829fb8a83b85dc8581e047687775
+IMGUR_API_ID=c3826135d76f003
+IMGUR_API_SECRET=06682bbb9600a477c1cb3b7b097c4fbe8fd4d1d8
+IMGUR_CLIENT_ID=d1b4539f0667007
+IMGUR_CLIENT_SECRET=302c2b9c976ea67b4c9ba115d54113f72777352b
+
 MONGODB=mongodb://kizzlebot:tree444@ds055505.mongolab.com:55505/kizzlestore
 MONGOLAB_URI=mongodb://kizzlebot:tree444@ds055505.mongolab.com:55505/kizzlestore
 
@@ -38,20 +67,12 @@ LASTFM_KEY=3bd130d36573d4569bce36550fa02604
 LASTFM_SECRET=a7f3e7c48280bbc5cfa9650582437fe0
 
 
-FACEBOOK_ID=754220301289665
-FACEBOOK_SECRET=41860e58c256a3d7ad8267d3c1939a4a
 
-INSTAGRAM_ID=9f5c39ab236a48e0aec354acb77eee9b
-INSTAGRAM_SECRET=5920619aafe842128673e793a1c40028
 
-GITHUB_ID=d08225cdab75ba86d41b
-GITHUB_SECRET=3e4b015ce37ff6362b5b80abec4d2960f99b64fd
 
 TWITTER_KEY=6NNBDyJ2TavL407A3lWxPFKBI
 TWITTER_SECRET=ZHaYyK3DQCqv49Z9ofsYdqiUgeoICyh6uoBgFfu7OeYC7wTQKa
 
-GOOGLE_ID=528490553847-g9s18goq15h7cak75ksnq9ue6k96g6p3.apps.googleusercontent.com
-GOOGLE_SECRET=xkb9tVvVBu169dWSOotMGmPR
 
 LINKEDIN_ID=77chexmowru601
 LINKEDIN_SECRET=szdC8lN2s2SuMSy8
