--- a/package.json
+++ b/package.json
@@ -130,6 +130,7 @@
     "jade": "^1.11.0",
     "json-loader": "0.5.4",
     "just-wait": "1.0.5",
+    "raw-loader": "^0.5.1",
     "react-hot-loader": "^1.3.0",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
