--- a/package.json
+++ b/package.json
@@ -8,20 +8,10 @@
     "url": "https://github.com/RickWong/react-isomorphic-starterkit.git"
   },
   "homepage": "https://github.com/RickWong/react-isomorphic-starterkit",
-  "keywords": [
-    "react",
-    "isomorphic",
-    "universal",
-    "starter",
-    "boilerplate",
-    "template",
-    "webpack",
-    "transmit"
-  ],
+  "keywords": [ "react", "isomorphic", "expressjs", "universal", "starter", "boilerplate", "template", "webpack", "transmit" ],
   "main": "dist/server.js",
   "scripts": {
     "start": "forever --minUptime 1000 --spinSleepTime 1000 -c \"node --harmony\" ./dist/server.js",
-    "nodemon": "nodemon --watch ./src/server.js --exec \"npm run start \"",
     "build-server": "webpack --colors --display-error-details --config configs/webpack.server.js",
     "build-client": "webpack --colors --display-error-details --config configs/webpack.client.js",
     "build": "concurrently \"npm run build-server\" \"npm run build-client\"",
@@ -37,14 +27,12 @@
     "bitgo": "0.11.64",
     "body-parser": "^1.14.2",
     "bootstrap": "^3.3.6",
-    "bootstrap-webpack": "0.0.5",
     "cheerio": "^0.20.0",
     "clockwork": "^0.1.0",
     "compression": "^1.6.1",
     "connect-assets": "^5.1.0",
     "connect-mongo": "^1.1.0",
     "cookie-parser": "^1.4.1",
-    "css-loader": "0.23.1",
     "dotenv": "^2.0.0",
     "errorhandler": "^1.4.3",
     "express": "^4.13.4",
@@ -57,9 +45,7 @@
     "fetch-plus": "3.8.1",
     "fetch-plus-bearerauth": "3.5.0",
     "fetch-plus-json": "3.6.0",
-    "file-loader": "0.8.5",
     "font-awesome": "^4.5.0",
-    "font-awesome-webpack": "0.0.4",
     "github-api": "^0.11.2",
     "html-webpack-plugin": "^2.14.0",
     "instagram-node": "^0.5.8",
@@ -67,8 +53,6 @@
     "isomorphic-style-loader": "0.0.10",
     "jquery": "^2.2.2",
     "lastfm": "^0.9.2",
-    "less": "^2.6.1",
-    "less-loader": "^2.2.3",
     "lob": "^3.7.0",
     "lodash": "^4.1.0",
     "lusca": "^1.3.0",
@@ -100,10 +84,7 @@
     "react-transmit": "3.1.7",
     "redux": "^3.3.1",
     "request": "^2.69.0",
-    "sass-loader": "3.1.2",
     "serve-favicon": "^2.3.0",
-    "stripe": "^4.3.0",
-    "style-loader": "0.13.0",
     "tumblr.js": "^0.0.7",
     "twilio": "^3.3.0-edge",
     "twit": "^2.2.1",
@@ -120,6 +101,7 @@
     "babel-preset-stage-0": "6.5.0",
     "bootstrap-webpack": "0.0.5",
     "concurrently": "2.0.0",
+    "css-loader": "0.23.1",
     "exports-loader": "^0.6.3",
     "expose-loader": "^0.7.1",
     "extract-text-webpack-plugin": "^1.0.1",
@@ -130,10 +112,14 @@
     "jade": "^1.11.0",
     "json-loader": "0.5.4",
     "just-wait": "1.0.5",
+    "less": "^2.6.1",
+    "less-loader": "^2.2.3",
     "raw-loader": "^0.5.1",
     "react-hot-loader": "^1.3.0",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
+
+
     "url-loader": "^0.5.7",
     "webpack": "1.12.14",
     "webpack-dev-server": "1.14.1",
