added WEBPACK_PORT default to package.json and all webpack configs

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build": "concurrently \"npm run build-server\" \"npm run build-client\"",
     "watch-server": "webpack --watch --verbose --colors --display-error-details --config configs/webpack.server-watch.js",
     "watch-server-start": "node node_modules/just-wait --pattern \"dist/*.js\" && npm run start",
-    "watch-client": "webpack-dev-server --config configs/webpack.client-watch.js",
+    "watch-client": "webpack-dev-server --config configs/webpack.client-watch.js --port=${WEBPACK_PORT:=\"8080\"}",
     "watch": "concurrently --kill-others \"npm run watch-server-start\" \"npm run watch-server\" \"npm run watch-client\""
   },
   "dependencies": {
