fixed `npm run build`

--- a/.env
+++ b/.env
@@ -17,7 +17,7 @@
  * IMPORTANT  IMPORTANT  IMPORTANT  IMPORTANT  IMPORTANT  IMPORTANT  IMPORTANT
  */
 
-#!/usr/bin/env bash
+
 
 
 
@@ -28,7 +28,7 @@ IMGUR_CLIENT_ID=d1b4539f0667007
 IMGUR_CLIENT_SECRET=302c2b9c976ea67b4c9ba115d54113f72777352b
 
 
-SESSION_SECRET=Your Session Secret goes here
+SESSION_SECRET=ABCDEFG
 
 MAILGUN_USER=postmaster@sandbox697fcddc09814c6b83718b9fd5d4e5dc.mailgun.org
 MAILGUN_PASSWORD=29eldds1uri6
