--- a/package.json
+++ b/package.json
@@ -106,7 +106,9 @@
   "devDependencies": {
     "babel": "6.5.2",
     "babel-core": "6.6.5",
+    "babel-jest": "^9.0.3",
     "babel-loader": "6.2.4",
+    "babel-polyfill": "^6.6.1",
     "babel-preset-es2015": "6.6.0",
     "babel-preset-react": "6.5.0",
     "babel-preset-react-hmre": "1.1.1",
@@ -122,6 +124,7 @@
     "forever": "0.15.1",
     "imports-loader": "^0.6.5",
     "jade": "^1.11.0",
+    "jest-cli": "^0.9.2",
     "json-loader": "0.5.4",
     "just-wait": "1.0.5",
     "less": "^2.6.1",
