--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "fetch-plus-json": "3.6.0",
     "font-awesome": "^4.5.0",
     "github-api": "^0.11.2",
+    "history": "^2.0.1",
     "html-webpack-plugin": "^2.14.0",
     "instagram-node": "^0.5.8",
     "isomorphic-fetch": "2.2.1",
@@ -91,6 +92,7 @@
     "react-bootstrap": "^0.28.4",
     "react-dom": "0.14.7",
     "react-inline-css": "2.1.0",
+    "react-redux": "^4.4.1",
     "react-router": "2.0.0",
     "react-router-bootstrap": "^0.20.1",
     "react-transmit": "3.1.7",
